# Dublin-Bikes

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .htmlhintrc  .pre-commit-config.yaml  .stylelintignore  README.md  app.py  commitlint.config.js  environment.yml  package copy.json  package.json  prettier.config.js  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md
Flask_App/: static_data_info.md
Web_Scrape/: scraper.py
app/: __init__.py  extensions.py  main.py  ml_model.h5  models.py
app/configs/: __init__.py  base.py  development.py  production.py
app/models/: __init__.py  availability.py  station.py  weather.py
app/routes/: __init__.py  data_fetcher.py
app/static/css/: site.css  style.css
app/static/js/: main.js  stations_static.json
app/templates/: index.html  stations.html  weather.html
configs/: base.py
docs/: Folder Structure.md  Scrapers.md
ml/: __init__.py  machineleaning.ipynb  ml_model.h5  ml_model.keras  preprocessor.pkl
scraper/: __init__.py  bike_scraper.py  dynamic_info.md  scraper.py  static_info.md  weather_scraper.py
scraper/scripts/: bike_scraper.sh  weather_scraper.sh
static/css/: site.css
static/js/: main.js
templates/: index.html
tests/: __init__.py
tests/app/: __init__.py
tests/ml/: __init__.py  ml_test.ipynb  test.ipynb
tests/scraper/: __init__.py
